Fix wip spacing

--- a/wip-style.css
+++ b/wip-style.css
@@ -8,8 +8,7 @@ body {
 .wip-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    margin: 10vh;
 }
 
 h1,
